tests/sksl/errors/ReservedNameDvec3.glsl
### Compilation failed:

error: 1: name 'dvec3' is reserved
int dvec3;
    ^^^^^
1 error
